# iot-cattle-management

./: .gitignore  README.md  bovinos.sql  bovinos_data.sql  docker-compose-fazenda.yml  docker-compose.yml  events_raw  events_raw.txt
Fazenda/: docker-compose-fazenda.yml  eventos  grafana.ini
Pasta_Testes_Populate/: Dockerfile  como_usar.txt  populate_data.py
arquiteture/: computer-vision.md  db_global_architecture.md  er_diagram_db_global.puml  readme.md
arquiteture/RFID_telemetry_embedded/: description.md  esp32-pinout.md  read.md  select_tree_diagram.txt  tree-select-diagram_v2.txt
arquiteture/computer-vision/: READ.md  README.md  database.md  raspi-cam-config.md
arquiteture/gateway-config/: README.md
arquiteture/pico-w/: STARTER.md
arquiteture/software/: basic_diagram.md  readme.md
camera-ip/: README_camera_pi.md  yolo-tiny-respi3.md
camera-ip/yolo-tiny/: README.md  count_cattle_simple.py  detect_livestock_debug.py  index.html
consumidor/: Dockerfile  consumidor.py  requirements.txt
docs/: arquitetura_sistema.md  guia_docker.md
docs/diagramas/: func_leitor.md
docs/hardware/: README.md
hardware/: README.md
hardware/firmware/: CMakeLists.txt  README.md  config.h  lwipopts.h  main.c
hardware/firmware/app/: app_state.c  app_state.h
hardware/firmware/drivers/: dht22.c  dht22.h  display.c  display.h  rfid.c  rfid.h  time_util.c  time_util.h  wifi_driver.c  wifi_driver.h
hardware/firmware/lib/: ssd1306.h
hardware/firmware/menu/: menu.c  menu.h  menu_def.h
hardware/firmware/mqtt/: mqtt_client.c  mqtt_client.h
hardware/firmware/payload/: payload.c  payload.h
web-comercial/: ATUALIZAR-AGORA.sh  BANNER.txt  COLA-GIT.md  COMANDOS-RAPIDOS.sh  COMO-ATUALIZAR-NO-GITHUB.md  COMO-USAR.txt  DEPLOY-COMPLETO.sh  ENVIAR-PARA-GITHUB.sh  EXECUTAR-SCRIPTS.md  EXECUTAR-TUDO.sh  EXEMPLO-CODIGO.md  GUIA-COMPLETO-GIT.md  GUIA-RAPIDO.txt  INDEX.txt  INSTRUCOES-GIT.md  LEIA-ME-GITHUB.md  PASSO-A-PASSO-VISUAL.md  README.md  RESUMO-VISUAL.txt  SCRIPTS-README.md  START-HERE.md  TESTE-LOCAL.md  TROCAR-VIDEO-RAPIDO.txt  VERIFICAR-TAMANHO-VIDEO.sh  VIDEO-CONFIG.md  index.html  package.json  script.js  styles.css  🎉-TUDO-PRONTO.md  📚-INDICE-DE-ARQUIVOS.md  📦-RESUMO-COMPLETO.md  🚀-COMECE-AQUI.md
(+2 files in other folders)
